2007-01-29  Juanma Barranquero  <lekktu@gmail.com>

	* url-auth.el (url-get-authentication): Fix typo in docstring.

2007-01-14  Magnus Henoch  <mange@freemail.hu>

	* url-proxy.el (url-proxy-object): Remove.
	(url-proxy): Don't use `url-proxy-object'.  Act according to type of
	proxy (currently only HTTP supported).

	* url.el (url-retrieve-internal): Don't use `url-proxy-object'.

	* url-http.el (url-http-proxy): New variable.
	(url-http-create-request): Use it.  Don't use `url-proxy-object'.
	(url-http): Treat `url' argument as resource to download, and
	dynamic variable `url-using-proxy' as proxy to use.  Set
	`url-current-object' to actual URL, and `url-http-proxy' to proxy
	used.
	(url-http-handle-cookies): Assume that `url-current-object' does
	not point to the proxy used.
	(url-http-async-sentinel): Adapt error message.

2006-12-10  Juanma Barranquero  <lekktu@gmail.com>

	* url-gw.el (url-gateway-nslookup-program): Doc fix.

2006-12-08  Magnus Henoch  <mange@freemail.hu>

	* url-proxy.el (url-proxy-object): New variable.
	(url-proxy): Bind it instead of `proxy-object'.

	* url-http.el (url-http-create-request): Remove url argument, use
	the buffer-local variable `url-http-target-url' instead.  Both
	callers updated.  Simplify proxy handling.
	(url-http): Don't make proxy-object buffer local.

	* url.el (url-retrieve-internal): Bind url-proxy-object to nil.

2006-11-26  Magnus Henoch  <mange@freemail.hu>

	* url-http.el (url-http-wait-for-headers-change-function): Use
	`when' instead of `if' when possible.
	(url-http): Define url-http-response-version.
	(url-http-parse-response): Set it.
	(url-http-parse-headers): Use it to determine keep-alive behavior.

2006-11-23  Diane Murray  <disumu@x3y2z1.net>

	* url-http.el (url-http-content-length-after-change-function): Use
	`url-lazy-message'.

	* url-util.el (url-display-percentage): Only show a message if
	`url-show-status' is non-nil.

2006-11-15  Magnus Henoch  <mange@freemail.hu>
